bundle/manifests/clo-permissive-network-policy_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: cluster-logging-operator
  name: clo-permissive-network-policy
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - ports:
    - port: 6443
      protocol: TCP
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      name: cluster-logging-operator
  policyTypes:
  - Ingress
  - Egress
